# GAMax

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  LICENSE  backend.cabal
backend/app/: Main.hs
backend/src/: Genetic.hs  Types.hs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: app.js  style.css
