cabal-version:      3.0
name:               backend
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Voaides Robert
maintainer:         voaides.r@yahoo.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable backend
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    other-modules:  , Types 
                    , Genetic
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0,
                      vector, 
                      random,
                      aeson, 
                      servant-server, 
                      warp, 
                      wai,
                      wai-cors
    hs-source-dirs:   app
                    , src
    default-language: Haskell2010
